@@ -22,10 +22,11 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<arangodb-java-driver.version>${project.version}</arangodb-java-driver.version>
 		<logback-classic.version>1.1.3</logback-classic.version>
 		<hamcrest-all.version>1.3</hamcrest-all.version>
 		<junit.version>4.12</junit.version>
+		<arangodb-java-driver.version>${project.version}</arangodb-java-driver.version>
+		<arangodb.velocypack.module.jdk8.version>1.0.0</arangodb.velocypack.module.jdk8.version>
 	</properties>
 
 	<developers>
@@ -201,6 +202,10 @@
 			<artifactId>arangodb-java-driver</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.arangodb</groupId>
+			<artifactId>velocypack-module-jdk8</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<scope>test</scope>
@@ -223,6 +228,11 @@
 				<groupId>com.arangodb</groupId>
 				<artifactId>arangodb-java-driver</artifactId>
 				<version>${arangodb-java-driver.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.arangodb</groupId>
+				<artifactId>velocypack-module-jdk8</artifactId>
+				<version>${arangodb.velocypack.module.jdk8.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
