@@ -1,47 +1,0 @@
-/*
- * DISCLAIMER
- *
- * Copyright 2016 ArangoDB GmbH, Cologne, Germany
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- *
- * Copyright holder is ArangoDB GmbH, Cologne, Germany
- */
-
-package com.arangodb.internal.velocypack;
-
-import java.time.Instant;
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-
-import com.arangodb.velocypack.VPack;
-
-/**
- * @author Mark - mark at arangodb.com
- *
- */
-public class VPackConfigureAsync {
-
-	public static void configure(final VPack.Builder builder) {
-
-		builder.registerDeserializer(Instant.class, VPackDeserializersAsync.INSTANT);
-		builder.registerDeserializer(LocalDate.class, VPackDeserializersAsync.LOCAL_DATE);
-		builder.registerDeserializer(LocalDateTime.class, VPackDeserializersAsync.LOCAL_DATE_TIME);
-
-		builder.registerSerializer(Instant.class, VPackSerializersAsync.INSTANT);
-		builder.registerSerializer(LocalDate.class, VPackSerializersAsync.LOCAL_DATE);
-		builder.registerSerializer(LocalDateTime.class, VPackSerializersAsync.LOCAL_DATE_TIME);
-
-	}
-
-}
