@@ -4,6 +4,8 @@ v4.1.11 (2017-03-xx)
 * added convenience methods (ArangoCollection.getIndex(String), .deleteIndex(key))
 * fixed exception handling in Connection (issue #110)
 * added connection pooling (issue #103)
+* extracted VelocyPack implementation to https://github.com/arangodb/java-velocypack
+* added dependency java-velocypack-module-jdk8
 
 v4.1.10 (2017-02-22)
 ---------------------------
